--- a/resources/assets/sass/questions/question10.scss
+++ b/resources/assets/sass/questions/question10.scss
@@ -97,7 +97,7 @@
 }
 
 .question-contactInformationSubmitButton {
-    @extend .form-submitButton;
+    @extend .buttonAnimated-gold;
     
     margin-top: 14px;
 }
