--- a/resources/assets/sass/questions/questionBase.scss
+++ b/resources/assets/sass/questions/questionBase.scss
@@ -179,7 +179,7 @@
 }
 
 .question-submit {
-    @extend .button;
+    @extend .buttonAnimated-gold;
     
     margin-top: 30px;
     float: right;
