--- a/resources/assets/sass/components/form.scss
+++ b/resources/assets/sass/components/form.scss
@@ -122,11 +122,11 @@
 textarea.form-input { height: 192px; }
 
 .form-submitButton {
-    @extend .button-withBorder;
+    @extend .buttonAnimated-gold;
     
     display: block;
     width: 100%;
-    margin-top: 3px;
+    margin-top: 18px;
     position: relative;
     z-index: 1;
 }
