--- a/resources/assets/sass/components/article.scss
+++ b/resources/assets/sass/components/article.scss
@@ -16,3 +16,8 @@
     background: linear-gradient(to bottom, rgba(0,0,0,0) 0%,rgba(0,0,0,0.75) 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
     filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#00000000', endColorstr='#bf000000',GradientType=0 ); /* IE6-9 */
 }
+
+.regularParagraph button.article-header-btn{
+  @extend .buttonAnimated-gold;
+  text-decoration: none;
+}
