--- a/resources/assets/sass/components/navbar.scss
+++ b/resources/assets/sass/components/navbar.scss
@@ -4,7 +4,7 @@
     top: 0;
     left: 0;
     width: 100%;
-    height: 100px;
+    height: 130px;
     background: #242424;
     margin-bottom: 0;
     box-shadow: 0 0 11px rgba(0, 0, 0, 0.5);
@@ -111,6 +111,13 @@
         padding-left: 0;
         padding-right: 0;
     }
+}
+
+.navbar-supheader{
+  padding: 4px 0;
+  background-color: white;
+  font-size: 16px;
+  font-weight: 300;
 }
 
 .navbar-nav {
