--- a/resources/assets/sass/components/navbar.scss
+++ b/resources/assets/sass/components/navbar.scss
@@ -4,7 +4,7 @@
     top: 0;
     left: 0;
     width: 100%;
-    height: 130px;
+    height: $nav-height;
     background: #242424;
     margin-bottom: 0;
     box-shadow: 0 0 11px rgba(0, 0, 0, 0.5);
