homepage supheader only homepage

--- a/resources/assets/sass/base.scss
+++ b/resources/assets/sass/base.scss
@@ -20,6 +20,11 @@ body {
     &.modal-open {
         overflow: auto !important;
     }
+
+    &.isHome{
+      padding-top: 130px;
+    }
+
 }
 
 h1, h2, h3, h4, h5, h6, p, ul, ol {
