--- a/resources/assets/sass/components/navbar.scss
+++ b/resources/assets/sass/components/navbar.scss
@@ -9,6 +9,11 @@
     margin-bottom: 0;
     box-shadow: 0 0 11px rgba(0, 0, 0, 0.5);
     z-index: 25; // .select2 = 10, .imarcomLoader = 20/21
+
+    body.isHome &{
+      height: 130px;
+    }
+
 }
 
 .navbar-header { float: none; }
