--- a/resources/assets/sass/questions/question6.scss
+++ b/resources/assets/sass/questions/question6.scss
@@ -139,11 +139,12 @@
     cursor: pointer;
     
     &.fakeInput-checked:before {
-        top: 0;
-        left: 0;
-        width: 100%;
-        height: 100%;
-        background: url(/images/exclusion-checked.png) 0 0 no-repeat;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%,-50%);
+        width: 75%;
+        height: 75%;
+        background: url(/images/thumbs_down.png) 0 0 no-repeat;
         background-size: 100%;
         z-index: 1;
     }
