question 9 checked icon black

--- a/resources/assets/sass/questions/question9.scss
+++ b/resources/assets/sass/questions/question9.scss
@@ -48,7 +48,7 @@
     display: block;
     width: 44px;
     height: 44px;
-    background: url(/images/checked-gold.png) center center no-repeat;
+    background: url(/images/checked-black.png) center center no-repeat;
     background-size: 44px;
     position: absolute;
     top: 245px;
