stylist section txt

--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -70,3 +70,6 @@
 @import "questions/question9";
 @import "questions/question10";
 @import "questions/question11";
+
+// Pages
+@import "pages/stylism"
