--- a/resources/assets/sass/components/navbar.scss
+++ b/resources/assets/sass/components/navbar.scss
@@ -4,7 +4,6 @@
     top: 0;
     left: 0;
     width: 100%;
-    height: $nav-height;
     background: #242424;
     margin-bottom: 0;
     box-shadow: 0 0 11px rgba(0, 0, 0, 0.5);
@@ -13,6 +12,11 @@
     body.isHome &{
       height: 130px;
     }
+
+    .navbar-container{
+      height: $nav-height;
+      background: #242424;
+    } 
 
 }
 
@@ -124,6 +128,10 @@
   font-size: 16px;
   font-weight: 300;
   text-align: center;
+
+  @media (max-width: $screen-xs-max) {
+    font-size: 14px;
+  }
 }
 
 .navbar-nav {
